# wakfu-utils

./: .gitignore  base_cfg.toml  buildcodes_example.py  dev-requirements.txt  interseting_queries.sql  msgspec-0.18.4-cp311-cp311-emscripten_3_1_45_wasm32.whl  pyproject.toml  readme.md  stdlib_standalone.py  update.bat  update.py  update.sh  wakforge_entrypoint_testscript.py
.devcontainer/: .devcontainer.json
.github/workflows/: item_data_updater.yml
community_sourced_data/: ah_finite_exclusions.txt  arch_or_horde_and_boss.txt  archdrops.txt  hordes.txt  items.csv  legacy.txt  pvp.txt  readme.md  ubs.txt  unobtainable.txt
exported_data/: readme.md
exported_data/wakforge/: item_sources.json
misc/: better_than_heuristic_counterexample.py
scripts/: __init__.py  build_compressor.py  compressed_data_gen.py  downloader.py  dump_db.py  entrypoint.py  gui.py  interseting_queries.sql  item_conditions.py  object_parsing.py  restructured.py  restructured_types.py  solver.py  sqlify.py  structured_compressed_gen.py  unobs.py
src/: build_compressor.py  functional.py  item_conditions.py  no_effort_gui.py  solver.py
src/scripts/: compressed_data_gen.py  downloader.py  sqlify.py
src/wakautosolver/: __init__.py  build_compressor.py  entrypoint.py  restructured_types.py  v1_entrypoint.py
src/wakautosolver/b2048/: __init__.py  dec_table.py  enc_table.py  encoder.py
wakautosolver/: __init__.py  __main__.py  _build_codes.py  _compat.py  _mp_fb.py  _short_debug_info.py  _typing_memes.py  build_codes.py  build_compressor.py  entrypoint.py  functional.py  item_conditions.py  item_data.bz2  locale_bundle.bz2  object_parsing.py  restructured_types.py  solver.py  stdlib_standalone.py  unobs.py  utils.py  v1_entrypoint.py  versioned_entrypoints.py  wakforge_buildcodes.py
wakautosolver/b2048/: __init__.py  encoder.py
wakautosolver/data/: items.db  items.sql  locale_bundle.bz2  readme.md  source_info.bz2  source_info.xz  stat_only_bundle.bz2  stat_only_bundle.xz
