[tool.pyright]
include = ["wakautosolver", "scripts"]
typeCheckingMode = "strict"
pythonVersion = "3.11"

[tool.ruff]

line-length = 130
target-version = "py311"
select = [
    "F", "E", "I", "UP", "YTT", "ANN", "S", "BLE", "B", "A", "COM", "C4", "DTZ",
    "EM", "ISC", "G", "INP", "PIE", "T20", "Q003", "RSE", "RET", "SIM", "TID", "PTH",
    "ERA", "PD", "PLC", "PLE", "PLW", "TRY", "NPY", "RUF"
]

extend-ignore = [
    "G002",  # erroneous issue with %-logging when logging can be confiured for % logging
    "S101",  # use of assert here is a known quantity, blame typing memes
    "PLR2004",  # Magic value comparison, may remove later
    "SIM105",  # supressable exception, I'm not paying the overhead of contextlib.supress for stylistic choices.
    "C90",  # mccabe complexity memes
    "ANN101", # missing "Self" annotation, self is implicit
    "ANN102", # Same, but for cls
    "ANN204",  # special method return types
    "PLR0913", # number of function arguments
    "UP007", # "Use | For Union" doesn't account for typevar tuple unpacking.
    "PTH123",  # `open()` should be replaced by `Path.open()`
    "PLR",     # more complexity things
    "COM812",  # trailing commmas
    "ERA001", # commented out code
    "E731", # No, I think I'll keep my lambdas when I feel they are the right call
    "B905", # zip without explicit strict=
    "COM819",  # reccomended by ruff when using ruff format
    "E501",  # reccomended by ruff when using ruff format
    "ISC001",  # reccomended by ruff when using ruff format
    "Q003",  # reccomended by ruff when using ruff format
]

[tool.ruff.extend-per-file-ignores]
"wakautosolver/b2048/enc_table.py" = ["RUF001"]
"wakautosolver/b2048/dec_table.py" = ["RUF001"]
"wakautosolver/__init__.py" = ["F401"]  # unused import in __init__
"buildcodes_example.py" = ["RUF003", "T201"]

[project]
name="wakautosolver"
license = "MPL-2.0"
requires-python = ">=3.11"
authors = [{ name = "Michael Hall", email = "michael@michaelhall.tech" }]
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "msgspec>=0.18.4",
    "tqdm>=4.66.1",
]

[project.urls]
Homepage = "https://github.com/mikeshardmind/wakfu-utils"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "wakautosolver/__init__.py"

[tool.hatch.build]
artifacts = ["*.bz2"]

[tool.hatch.build.targets.wheel]
include = [
    "/wakautosolver",
    "/LICENSE",
]